kubernetes/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estatewise-frontend
  labels:
    app: estatewise-frontend
    app.kubernetes.io/part-of: estatewise
  namespace: estatewise
spec:
  selector:
    app: estatewise-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
